# Cute

./: .clang-format  CMakeLists.txt  LICENSE  README.md  main.cpp
Cute/: CMakeLists.txt
Cute/include/Cute/Engine/: BasicEngine.hpp  Engine.hpp  MakeEngine.hpp  Model.hpp  Scene.hpp  Timer.hpp  basic_engine.hpp  make_engine.hpp
Cute/include/Cute/Graphics/Camera/: Camera.hpp
Cute/include/Cute/Graphics/Shaders/: Shader.hpp
Cute/include/Cute/Graphics/Shapes/: BasicShape.hpp  Box.hpp  Shape.hpp  basic_shape.hpp
Cute/include/Cute/Graphics/Transform/: Model.hpp  Projection.hpp  View.hpp
Cute/include/Cute/Graphics/Vertices/: DataType.hpp  VertexArray.hpp  VertexBuffer.hpp  data_type.hpp  vertex_array.hpp  vertex_buffer.hpp
Cute/include/Cute/Graphics/textures/: texture.hpp
Cute/include/Cute/Testing/: BoxScene.hpp  CameraScene.hpp  ClearScene.hpp  box_scene.hpp  camera_scene.hpp  clear_scene.hpp  texture_scene.hpp
Cute/source/Engine/: BasicEngine.cpp  basic_engine.cpp
Cute/source/Engine/Internal/: DefaultScene.hpp  GlobalTimer.hpp  default_scene.hpp  global_timer.hpp
Cute/source/Graphics/Shaders/: Shader.cpp
Cute/source/Graphics/Shapes/: Box.cpp
Cute/source/Graphics/Vertices/: DataType.cpp  VertexArray.cpp  VertexBuffer.cpp  data_type.cpp  vertex_array.cpp  vertex_buffer.cpp
Cute/source/Graphics/textures/: texture.cpp
Cute/source/Internal/: GlDebug.hpp  GlWrappers.hpp
Cute/source/Testing/: BoxScene.cpp  CameraScene.cpp  ClearScene.cpp  box_scene.cpp  camera_scene.cpp  clear_scene.cpp  texture_scene.cpp
Resources/Shaders/: f_box.glsl  v_box.glsl
cmake/: fetch_glew.cmake  fetch_glfw.cmake  fetch_glm.cmake  fetch_imgui.cmake  fetch_stb_image.cmake
cmake/modules/: findOwnGLEW.cmake
